# gb-recompiled

./: .gitignore  ARCH.md  CMakeLists.txt  COMPATIBILITY.md  GROUND_TRUTH_WORKFLOW.md  README.md  ROADMAP.md  TEST_RESULTS.md  final_test_output.txt  test_output.txt  tetris_log.txt  vram_log.txt
.agent/rules/: rules.md
.agent/workflows/: run_blargg_tests.md
.github/workflows/: release.yml
01-special_test/: CMakeLists.txt  _01_special.c  _01_special.h  _01_special_main.c  _01_special_rom.c
cpu_instrs_test/: CMakeLists.txt  cpu_instrs.c  cpu_instrs.h  cpu_instrs_main.c  cpu_instrs_rom.c
instr_timing_test/: CMakeLists.txt  instr_timing.c  instr_timing.h  instr_timing_main.c  instr_timing_rom.c
pokemon_test/: CMakeLists.txt  pokemon_blue.h  pokemon_blue_main.c
recompiler/: CMakeLists.txt
recompiler/include/recompiler/: analyzer.h  bank_tracker.h  decoder.h  rom.h
recompiler/include/recompiler/codegen/: c_emitter.h  emitter.h
recompiler/include/recompiler/ir/: ir.h  ir_builder.h  ir_optimizer.h
recompiler/src/: analyzer.cpp  bank_tracker.cpp  decoder.cpp  generator.cpp  main.cpp  rom.cpp  symbol_table.cpp
recompiler/src/codegen/: c_emitter.cpp
recompiler/src/ir/: ir_builder.cpp  ir_optimizer.cpp
runtime/: CMakeLists.txt
runtime/include/: audio.h  gbrt.h  gbrt_debug.h  platform_sdl.h  ppu.h
runtime/src/: audio.c  gbrt.c  interpreter.c  platform_sdl.c  ppu.c
special_test/: CMakeLists.txt  special_test.c  special_test.h  special_test_main.c
tetris_test/: tetris.c  tetris_main.c
tools/: capture_ground_truth.py  compare_ground_truth.py  gen_test_rom.py  mass_recompile.py
